src/styles/_guide.scss
/* Feedback
   ========================================================================== */

.docs-content .guide-feedback {
	background: rgba($accent, .1);
	border-radius: 4px;
	padding: 45px 0 35px;
	margin: 45px 0 25px;
	text-align: center;
	width: 100%;
}

.docs-content .guide-feedback-btn {
	margin: 45px 12px 0 12px;
	width: 134px;
}

/* Edit on GitHub
   ========================================================================== */

.docs-content .guide-github {
	margin: 0 0 45px;
	width: 100%;
}

.docs-content .guide-github-img {
	background: rgba($primary, .1);
	border-radius: 4px 0 0 4px;
	float: left;
	height: 96px;
	line-height: 96px;
	text-align: center;
	width: 96px;
}

.docs-content .guide-github-text {
	background: rgba($primary, .05);
	border-radius: 0 4px 4px 0;
	color: rgba($primary, .6);
	font-size: 16px;
	height: 96px;
	margin-left: 96px;
	padding-left: 20px;
}

.docs-content .guide-github-text p {
	line-height: 96px;
}

.docs-content .guide-github-link {
	font-weight: 600;
}

